Deleting/starring tasks // design changes for lists and tasks

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
   <script src="script.js" type="text/javascript" defer></script>
   <title>To Do</title>
 </head>
@@ -20,6 +21,7 @@
         <div class="menu-header">
           <button id="all-tasks">All Tasks</button>
           <button id="today-tasks">Today</button>
+          <button id="starred-tasks">Starred</button>
         </div>
         <div class="menu-content">
           <div class="list-labels">
@@ -46,22 +48,24 @@
               </div>
             </div>
             <div class="list-container">
-              
+
             </div>
           </div>
         </div>
       </div>
       <div id="tasks-container">
-        
+
       </div>
       <div id="newTaskModal" class="new-task-modal">
         <div class="task-modal-content">
           <form action="" id="modal-form">
             <label for="todo-title">To Do</label>
-            <input type="text" name="todo-title" id="todo-title" placeholder="e.g pay bills" required>
+            <input type="text" name="todo-title" id="todo-title" placeholder="e.g pay bills // MAX 45 characters"
+              required maxlength="45">
 
             <label for="todo-description">Description</label>
-            <input type="text" name="todo-description" id="todo-description" placeholder="e.g pay the water bill" required>
+            <input type="text" name="todo-description" id="todo-description" placeholder="e.g pay the water bill"
+              required>
 
             <label for="todo-date">Date</label>
             <input type="date" name="todo-date" id="todo-date" required>
@@ -74,6 +78,6 @@
       </div>
     </div>
   </div>
-</body>
-</html>
+  </body>
 
+</html>
